import VoucherButtonTestCases from "../VoucherButtonTestCases";
import testRunner from "../../../../../Services/testRunner/testRunner";

VoucherButtonTestCases.map(testRunner);
