// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Voucher Button 1`] = `
<TouchableOpacity
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 24,
      },
      Object {
        "borderBottomColor": "rgba(239, 239, 239, 1)",
        "borderBottomWidth": 1,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,198,132,1)",
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 14,
        "lineHeight": 14,
      }
    }
  >
    View Voucher
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0,198,132,1)",
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "voyager",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</TouchableOpacity>
`;

exports[`Voucher Button Last 1`] = `
<Unknown
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 24,
      },
      Object {},
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,198,132,1)",
        "fontFamily": "SourceSansPro-SemiBold",
        "fontSize": 14,
        "lineHeight": 14,
      }
    }
  >
    View Voucher
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgba(0,198,132,1)",
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "voyager",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</Unknown>
`;
